# Kinetica-Engine

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENCE  README.md  ROADMAP.md  STATUS.md
.github/workflows/: ci.yml
hypermotion/: CMakeLists.txt  build.sh  build_gui.bat  build_gui.sh
hypermotion/gui/: CMakeLists.txt  HyperMotionApp.cpp  HyperMotionApp.h  REQUIREMENTS.txt  build.bat  build.sh  main.cpp
hypermotion/gui/resources/: hm_studio.manifest  hm_studio.rc
hypermotion/include/HyperMotion/: Pipeline.h
hypermotion/include/HyperMotion/analysis/: MotionEmbedder.h  MotionFingerprint.h  MotionInterpolator.h  MotionSearch.h
hypermotion/include/HyperMotion/core/: Logger.h  MathUtils.h  PipelineConfigIO.h  ScopedTimer.h  Types.h
hypermotion/include/HyperMotion/dataset/: AnimationDatabase.h  ClipExtractor.h  ClipQualityFilter.h  MatchAnalyser.h  MotionClassifier.h  MotionClusterer.h
hypermotion/include/HyperMotion/export/: AnimClipUtils.h  BVHExporter.h  JSONExporter.h
hypermotion/include/HyperMotion/ml/: ConditionEncoder.h  MotionDiffusionModel.h  MotionGenerator.h  MotionTransformer.h  NoiseScheduler.h  OnnxInference.h
hypermotion/include/HyperMotion/motion/: CanonicalMotionBuilder.h  FootContactDetector.h  TrajectoryExtractor.h
hypermotion/include/HyperMotion/pose/: DepthLifter.h  MultiPersonPoseEstimator.h  PlayerDetector.h  PoseBatchProcessor.h  PoseEstimator.h  PoseLifter.h  PoseTracker.h  SinglePoseEstimator.h
hypermotion/include/HyperMotion/segmenter/: MotionFeatureExtractor.h  MotionSegmenter.h  TemporalConvNet.h
hypermotion/include/HyperMotion/signal/: ButterworthFilter.h  FootContactFilter.h  OutlierFilter.h  QuaternionSmoother.h  SavitzkyGolay.h  SignalPipeline.h
hypermotion/include/HyperMotion/skeleton/: RotationSolver.h  SkeletonMapper.h  SkeletonRetargeter.h
hypermotion/include/HyperMotion/streaming/: StreamingPipeline.h
hypermotion/include/HyperMotion/style/: ContrastiveLoss.h  StyleEncoder.h  StyleLibrary.h  StyleTrainer.h
hypermotion/include/HyperMotion/tracking/: MultiPlayerTracker.h  PlayerIDManager.h
hypermotion/python/: pyproject.toml
hypermotion/python/hypermotion/: __init__.py
hypermotion/python/hypermotion/data/: motion_dataset.py  style_dataset.py
hypermotion/python/hypermotion/models/: condition_encoder.py  contrastive_loss.py  motion_diffusion.py  noise_scheduler.py  style_encoder.py
hypermotion/python/hypermotion/training/: diffusion_trainer.py  style_trainer.py
hypermotion/python/scripts/: hm_style.py  hm_train.py
hypermotion/src/: Pipeline.cpp
hypermotion/src/analysis/: MotionEmbedder.cpp  MotionFingerprint.cpp  MotionInterpolator.cpp  MotionSearch.cpp
hypermotion/src/core/: Logger.cpp  MathUtils.cpp  PipelineConfigIO.cpp
hypermotion/src/dataset/: AnimationDatabase.cpp  ClipExtractor.cpp  ClipQualityFilter.cpp  MatchAnalyser.cpp  MotionClassifier.cpp  MotionClusterer.cpp
hypermotion/src/export/: AnimClipUtils.cpp  BVHExporter.cpp  JSONExporter.cpp
hypermotion/src/ml/: ConditionEncoder.cpp  MotionDiffusionModel.cpp  MotionGenerator.cpp  MotionTransformer.cpp  NoiseScheduler.cpp  OnnxInference.cpp
hypermotion/src/motion/: CanonicalMotionBuilder.cpp  FootContactDetector.cpp  TrajectoryExtractor.cpp
hypermotion/src/pose/: DepthLifter.cpp  MultiPersonPoseEstimator.cpp  PlayerDetector.cpp  PoseBatchProcessor.cpp  PoseEstimator.cpp  PoseLifter.cpp  PoseTracker.cpp  SinglePoseEstimator.cpp
hypermotion/src/segmenter/: MotionFeatureExtractor.cpp  MotionSegmenter.cpp  TemporalConvNet.cpp
hypermotion/src/signal/: ButterworthFilter.cpp  FootContactFilter.cpp  OutlierFilter.cpp  QuaternionSmoother.cpp  SavitzkyGolay.cpp  SignalPipeline.cpp
hypermotion/src/skeleton/: RotationSolver.cpp  SkeletonMapper.cpp  SkeletonRetargeter.cpp
hypermotion/src/streaming/: StreamingPipeline.cpp
hypermotion/src/style/: ContrastiveLoss.cpp  StyleEncoder.cpp  StyleLibrary.cpp  StyleTrainer.cpp
hypermotion/src/tracking/: MultiPlayerTracker.cpp  PlayerIDManager.cpp
hypermotion/tests/: test_canonical_motion.cpp  test_clip_quality.cpp  test_config.cpp  test_export.cpp  test_fingerprint.cpp  test_hardening.cpp  test_helpers.h  test_integration.cpp  test_mathutils.cpp  test_noise_scheduler.cpp  test_segmentation.cpp  test_signal.cpp  test_skeleton.cpp  test_tracking.cpp  test_types.cpp
hypermotion/tools/: hm_batch.cpp  hm_config.cpp  hm_demo.cpp  hm_extract.cpp  hm_style.cpp  hm_train.cpp  kinetica_analyse_match.cpp
hypermotion/training/: requirements.txt
hypermotion/training/hypermotion/data/: motion_dataset_builder.py
hypermotion/training/hypermotion/export/: onnx_export.py
hypermotion/training/hypermotion/models/: constants.py  motion_encoder.py  motion_transformer.py  temporal_conv_net.py
hypermotion/training/hypermotion/training/: classifier_trainer.py  motion_encoder_trainer.py
hypermotion/training/scripts/: setup_models.py  train_motion_encoder.py  visualise_motion_space.py
hypermotion/ue5_plugin/: HyperMotion.uplugin
hypermotion/ue5_plugin/Source/HyperMotion/: HyperMotion.Build.cs
hypermotion/ue5_plugin/Source/HyperMotion/Private/: HyperMotionAnimInstance.cpp  HyperMotionComponent.cpp  HyperMotionFootIK.cpp  HyperMotionMLInference.cpp  HyperMotionModule.cpp  HyperMotionStyleManager.cpp
hypermotion/ue5_plugin/Source/HyperMotion/Public/: HyperMotionAnimInstance.h  HyperMotionComponent.h  HyperMotionFootIK.h  HyperMotionMLInference.h  HyperMotionModule.h  HyperMotionStyleManager.h
ml/: __init__.py  constants.py  requirements.txt
ml/dataset_builder/: __init__.py  cli.py  frame_extractor.py  pipeline.py  pose_detector.py  sequence_exporter.py  skeleton_normalizer.py
ml/gameplay_learning/: __init__.py  cli.py  motion_segmenter.py  pipeline.py  player_tracker.py
ml/motion_embeddings/: __init__.py  cli.py  dataset.py  encoder.py  export_onnx.py  trainer.py
ml/motion_prediction/: __init__.py  cli.py  dataset.py  export_onnx.py  model.py  trainer.py
ml/motion_search/: __init__.py  cli.py  embedder.py  index.py
