[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "hypermotion"
version = "1.0.0"
description = "HyperMotion — ML training pipeline for motion capture animation"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "onnx>=1.15.0",
    "onnxruntime-gpu>=1.16.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "tqdm>=4.65.0",
]

[project.scripts]
hm-train = "scripts.hm_train:main"
hm-style = "scripts.hm_style:main"

[tool.setuptools.packages.find]
where = ["."]
